--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "svelte-fa": "^2.4.0"
+  }
 }
